# roulette

./: .gitignore  .gitmodules  LICENSE  Readme.md  scene_v3.xml
mitsuba/: playground.ipynb
mitsuba/.ipynb_checkpoints/: playground-checkpoint.ipynb  scene_v3-checkpoint.xml
notes/: adrrs.md  arvo&kirk.md  ears.md
renderer/: CMakeLists.txt  CMakeSettings.json  License.txt  main.cpp  scene.json  scenePanel.json  scene_v3.xml
renderer/ext/: CMakeLists.txt
renderer/ext/glad/: CMakeLists.txt
renderer/ext/glad/include/glad/: glad.h
renderer/ext/glad/src/: glad.c
renderer/src/: CMakeLists.txt  aabb.h  camera.h  ears.h  earstracer.cpp  framebuffer.cpp  framebuffer.h  imagestatistics.h  integrator.cpp  integrator.h  intersection.h  material.h  math.h  octtree.h  outlierrejectedaverage.h  pathtracer.cpp  pathtracer.h  primitive.cpp  primitive.h  ray.h  raytracer.cpp  renderer.cpp  renderer.h  rrsmethod.h  sample.h  sampler.h  scene.cpp  scene.h  scene_parser.h  sceneparser.cpp  sceneparser.h  shape.cpp  shape.h  tracer.h  tungstenmath.h  usings.h  weightedbitmapaccumulator.h
