add_library(core
        "camera.h"
        "framebuffer.h"
        "framebuffer.cpp"
        "integrator.h"
        "integrator.cpp"
        "intersection.h"
        "material.h"
        "tracer.h"
        "pathtracer.cpp"
        "primitive.h"
        "ray.h"
        "raytracer.cpp"
        "renderer.h"
        "sampler.h"
        "scene.h"
        "sceneparser.h"
        "sceneparser.cpp"
        "shape.h"
        "shape.cpp"
        "tungstenmath.h"
        "usings.h")
target_link_libraries(core
        nlohmann_json
        pugixml)
